# activist

./: .gitignore  .mastodon_mock.toml  .pre-commit-config.yaml  Makefile  MakefileMock  MakefileOps  README.md  activist.mock.toml  activist.toml  mkdocs.yml  mock.sh  ops.sh  pyproject.toml  servers.txt  tox.ini
.github/workflows/: pages.yml
activist/: approver.py  importer.py  main.py  persister.py  poster.py
admin-web/: .gitignore  angular.json  package-lock.json  package.json  proxy.conf.json
admin-web/src/: index.html  styles.css
admin-web/src/app/: app.component.ts  app.routes.ts
admin-web/src/app/core/: api.service.ts  models.ts  toast.service.ts
admin-web/src/app/personas/: profile-panel.component.ts
admin-web/src/app/queue/: action-bar.component.ts  content-detail.component.ts  queue-list.component.ts
docs/: TODO.md  draft_governing_policy.md  index.md
docs/design/: architecture.md  goals.md  index.md
docs/developer/: architecture.md  cli-and-contributing.md  codebase.md  configuration.md  core-concepts.md  execution-engine.md  execution-model.md  game-sim-personas.md  getting-started.md  index.md  mastodon-mock.md  operations.md
docs/operator/: fetch-review-publish.md  index.md  install-and-configure.md  troubleshooting.md
fixtures/: README.md  mentions-sample.toml  notifications-sample.json
fixtures/feeds/: canarymedia-sample.xml  cleantechnica-sample.xml  heatpumped-sample.xml
out_mock/2026-06-11_mock/: feed.html  feed.toml
persona/: knowledge.md  opinions.toml  persona.toml
persona/memory/: diary.md  mentions.jsonl  said.jsonl  seen.jsonl
policies/: c.im.txt  chaos.social.txt  climatejustice.social.txt  cyberplace.social.txt  det.social.txt  fosstodon.org.txt  glasgow.social.txt  hachyderm.io.txt  hostux.social.txt  ieji.de.txt  indieweb.social.txt  infosec.exchange.txt  ioc.exchange.txt  kolektiva.social.txt  mas.to.txt  masto.nu.txt  mastodon.au.txt  mastodon.bot.txt  mastodon.cloud.txt  mastodon.green.txt  mastodon.ie.txt  mastodon.online.txt  mastodon.scot.txt  mastodon.sdf.org.txt  mastodon.social.txt  mastodon.uno.txt  mastodon.world.txt  mastodonapp.uk.txt  mathstodon.xyz.txt  metalhead.club.txt  mindly.social.txt  mstdn.ca.txt  mstdn.jp.txt  mstdn.party.txt  mstdn.plus.txt  mstdn.social.txt  nerdculture.de.txt  noc.social.txt  ohai.social.txt  pawoo.net.txt  (+13 more)
policies_distilled/: 00_overview.md  01_bot_disclosure.md  02_attribution_and_ai_content.md  03_rate_and_volume.md  04_checks_by_enforcement.md  05_exclude_or_flag.md
policy_fetcher/: __main__.py  cli.py  discover.py  fetcher.py  fetcher_OLD.py  llm_spider.py  test_discover.py  test_fetcher.py  test_llm_spider.py
scripts/: build_demo.py
spec/: CLAUDE_RECOMMENDED_LLM_POLICY.md  COPILOT_RECOMMENDED_LLM_POLICY.md  GEMINI_RECOMMENDED_POLICY.md  admin_site.md  admin_ui.md  bots_in_games.md  codex_thinks.md  content_strategy.md  fetcher_service.md  improve_policy_downloads.md  local_poc.md  personas.md  personas_road_map.md  poster_service.md  real_overview.md
src/activist/: __init__.py  cli.py  config.py  digest.py  fetch.py  ingest.py  mastodon_client.py  models.py  pipeline.py  poster.py  queue_io.py  ratelimit.py  relevance.py  render.py  replies.py  reply_fetch.py  state.py  store.py  transport.py
src/activist/api/: __init__.py  app.py  deps.py  persona_routes.py  queue_routes.py  schemas.py
src/activist/engine/: __init__.py  base.py  mockbot.py  openrouter.py
src/activist/moderation/: __init__.py  base.py  mockmod.py  moderate.py  openrouter_mod.py  policies.py
src/activist/templates/: feed.html.tmpl
src/activist/web/: __init__.py  views.py
src/activist/web/static/: style.css
src/activist/web/templates/: _card_meta.html  base.html  detail.html  list.html
tests/: conftest.py  seed_opinions.toml  test_api.py  test_config.py  test_digest.py  test_e2e.py  test_fetch.py  test_fetch_chain.py  test_ingest.py  test_mastodon_client.py  test_mockbot.py  test_moderation.py  test_openrouter_models.py  test_poster.py  test_ratelimit.py  test_relevance.py  test_render.py  test_replies.py  test_reply_fetch.py  test_state.py  test_store.py  test_web.py  test_web_actions.py
tests/integration/: README.md  conftest.py  test_poster_against_mock.py  test_write_roundtrip.py
