[project]
name = "activist"
version = "0.1.0"
keywords = []
description = "Well behaved mastodon LLM bot."
readme = "README.md"
authors = [
    { name = "Matthew Dean Martin", email = "matthewdeanmartin@gmail.com" },
    { name = "Gemini" },
    { name = "ChatGPT" },
]
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pydantic",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.14",
    # "Programming Language :: Python :: 3.15",
    "Topic :: Security",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License"
]


dependencies = [
    "beautifulsoup4",
    "httpx[http2]>=0.28.1",
    # for counting tests.
    "pytest>0.0.0",
    # For LLM Features. They don't run by accident, so just including them
    # Readme Rater
    "openai>=2.6.1",
    "python-dotenv>=1.1.1",
    # TOML writing (stdlib tomllib is read-only); used for opinions.toml + feed.toml
    "tomli-w>=1.0.0",
    "flask>=3.1.3",
]

[dependency-groups]
dev = [
    "pip-licenses",
    #    "toml-formatter",
    "bitrab",
    "types-PyYAML",
    "troml;python_version>='3.11'",
    "cli-tool-audit",
    "git2md; python_version >= '3.10'",
    "pyclean; python_version >= '3.12'",
    "strip-docs>=1.0; python_version >= '3.12'",
    "gha-update; python_version >= '3.12'",
    "mkdocstrings[python]",
    "mkdocs; python_version >= '3.12'",
    "mdformat",
    # plugin finder
    "packaging; python_version >= '3.8'",
    # mpy
    "types-retry",
    "types-Markdown",
    "mypy; python_version >= '3.8'",
    "types-toml; python_version >= '3.8'",
    # reports
    # build
    "vermin; python_version >= '3.8'",
    "metametameta>=0.1.3; python_version >= '3.9'",
    "hatchling; python_version >= '3.8'",
    "ruff>=0.12.0; python_version >= '3.8'",
    "pylint; python_version >= '3.8'",
    "bandit; python_version >= '3.8'",
    "bandit>=1.8.6; python_version >= '3.14'",
    "pre-commit; python_version >= '3.8'",
    # testing tools
    "pytest; python_version >= '3.8'",
    "pytest-cov; python_version >= '3.8'",
    "pytest-xdist>=3.5.0; python_version >= '3.8'",
    "pytest-randomly>=3.15.0; python_version >= '3.8'",
    "pytest-sugar>=0.9.7; python_version >= '3.8'",
    "pytest-mock; python_version >= '3.8'",
    "pytest-asyncio",
    # "pytest-unused-whichfixtures; python_version >= '3.10'",
    "hypothesis[cli]; python_version >= '3.8'",
    "detect-test-pollution",
    "pytest-timeout>=2.4.0",
    # Mock Mastodon server (published on PyPI) — lets tests/integration exercise
    # the write/publish path against a real local HTTP server instead of live
    # Mastodon (which risks a bot ban). The [test] extra adds the zero-boilerplate
    # fixtures / MockServer helper. Requires Python >=3.13; the integration suite
    # self-skips otherwise.
    "mastodon_mock[test]; python_version >= '3.13'",
    # docs
    "interrogate>=1.5.0; python_version >= '3.8'",
    "pydoctest==0.2.1; python_version >= '3.8'",
    "pdoc3>=0.5.0; python_version >= '3.8'",
    "mdformat>=0.5.0; python_version >= '3.8'",
    "linkcheckmd>=1.4.0; python_version >= '3.8'",
    "codespell>=2.2.6; python_version >= '3.8'",
    "pyenchant>=3.2.2; python_version >= '3.8'",
    "pytest-network>=0.0.1",
]

[project.urls]
Repository = "https://github.com/matthewdeanmartin/activist"
Documentation = "https://troml-dev-status.readthedocs.io/en/latest/"
Changelog = "https://github.com/matthewdeanmartin/activist/blob/main/CHANGELOG.md"

homepage = "https://github.com/matthewdeanmartin/activist"
issues = "https://github.com/matthewdeanmartin/activist/issues/"


[project.scripts]
troml-dev-status = "activist.cli:main"
activist = "activist.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "src/activist/**/*.py",
    "src/activist/*.md",
    "src/activist/templates/*.tmpl",
    "src/activist/web/templates/*.html",
    "src/activist/web/static/*.css",
    "src/activist/py.typed",
    "/README.md", "LICENSE",
]

exclude = [

]


[tool.hatch.build.targets.wheel]
packages = ["src/activist"]
include = [
    "src/activist/**/*.py",
    "src/activist/*.md",
    "src/activist/templates/*.tmpl",
    "src/activist/web/templates/*.html",
    "src/activist/web/static/*.css",
    "src/activist/py.typed",
    "/README.md", "LICENSE",
]


[mypy]
plugins = "pydantic.mypy"

[tool.troml-dev-status]
mode = "application"  # or "library"
use_ai = true
